# Marzban_bot

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  api.py  main.py  pyproject.toml  user_service.py
backend/admin/: api.py  service.py
backend/autorization/: api.py  service.py
backend/settings/: config.py
backend/src/: api.py  config.py  main.py  token_manager.py  user_service.py
backend/user/: api.py  schemas.py  service.py  user_service.py
telegram_bot/: Dockerfile  pyproject.toml  test.py
telegram_bot/src/: config.py  main.py
telegram_bot/src/handlers/: api_requests.py  config.py  handlers.py  instruction.py  profile.py  purchase.py  start.py
telegram_bot/src/handlers/config/: config.py
