[project]
name = "marzban-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]
[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "api", "schemas", "user_service", "main"]  # Все ваши модули
